--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "Sergey Gurinovich <sergey@fsky.info>",
   "homepage": "https://qvnote.fsky.info",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.48",
-    "@vuepress/shared-utils": "^1.0.0-alpha.48",
+    "@vuepress/plugin-pwa": "^1.0.0",
+    "@vuepress/shared-utils": "^1.0.0",
     "cssnano": "^4.1.10",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "vuepress": "^1.0.0-alpha.48",
+    "vuepress": "^1.0.0",
     "vuepress-plugin-sitemap": "^2.1.2"
   },
   "devDependencies": {
