--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "Sergey Gurinovich <sergey@fsky.info>",
   "homepage": "https://qvnote.fsky.info",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.1",
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@vuepress/plugin-pwa": "^1.0.3",
     "@vuepress/shared-utils": "^1.0.3",
     "cssnano": "^4.1.10",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^8.0.0",
     "vuepress": "^1.0.3",
+    "vuepress-plugin-canonical": "^1.0.0",
     "vuepress-plugin-sitemap": "^2.1.2"
   },
   "devDependencies": {
