--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "vuepress-plugin-sitemap": "^2.3.1"
   },
   "devDependencies": {
-    "vuepress-plugin-minimal-analytics": "^0.1.4"
+    "@vuepress/plugin-google-analytics": "^1.5.0"
   }
 }
